--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html5devconf-automateallthethings",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "engines": {
     "node": "0.10.x",
@@ -9,5 +9,12 @@
   "dependencies": {
     "express": "~3.4.2",
     "ejs": "~0.8.4"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "load-grunt-tasks": "^0.4.0",
+    "time-grunt": "^0.3.1"
   }
 }
